--- a/video.html
+++ b/video.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Название компании</title>
+    <title>Видео - ПроКоммерцБанк</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="ico/faviconV2.png" type="image/x-icon">
-    <link rel="icon" href="ico/faviconV2.png">
-    <script src="script.js"></script>
 </head>
-<body onload="startAutoScroll()">
+<body>
     <header>
-        <h1>Название компании</h1>
-        <div class="menu-icon" onclick="toggleMenu()">
-            &#9776; <!-- Символ "бутерброд" -->
-        </div>
+        <h1 class="text">ПроКоммерцБанк</h1>
+        <div>
+            <img style="width: 16%; margin: 0 0 0 65%" src="img/imglog.jpg" alt="Офис ПроКоммерцБанка" class="logo">
+            </div>
+        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
         <div class="menu-panel">
             <ul>
                 <li><a href="index.html">О компании</a></li>
@@ -27,14 +26,13 @@
     </header>
 
     <main>
-        
+        <h2>Видео о компании</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6xn0jkKXlQ8?si=rTKvtNPU2bngp8O_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </main>
 
     <footer>
-        <p>&copy; Год основания Компании | Все права защищены</p>
+        <p>2006 - 2013 &copy; Все права защищены</p>
     </footer>
-
-    <script src="script.js">
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
